# cpw-antbackup

./: .gitignore  CMakeLists.txt  Config.h.in  Makefile.in  configure  configure.ac  net.cpwonline.cpw-antbackup.depend  prepareDB.sh  prepareFiles.sh  sendingFiles.sh
autom4te.cache/: output.0  requests  traces.0
include/: backups.h  documents.h  menu.h
src/: CMakeLists.txt  Makefile.am  Makefile.in  backups.cpp  backups.h  cpw-antbackup.cpp  documents.cpp  main.cpp  menu.cpp  menu.h  prepareDB.sh  prepareFiles.sh  saveDB.sh
tests/: TestBackups.cc
