## Process this file with automake to produce Makefile.in

AM_CPPFLAGS = \
	-DPACKAGE_LOCALE_DIR=\""$(localedir)"\" \
	-DPACKAGE_SRC_DIR=\""$(srcdir)"\" \
	-DPACKAGE_DATA_DIR=\""$(pkgdatadir)"\"

AM_CFLAGS =\
	 -Wall\
	 -g

bin_PROGRAMS = net_cpwonline_cpw_antbackup

net_cpwonline_cpw_antbackup_SOURCES = \
	main.cpp \
	menu.cpp \
	menu.h

net_cpwonline_cpw_antbackup_LDFLAGS = 

net_cpwonline_cpw_antbackup_LDADD = 


